Deploy the pages

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Joelgeorgie.github.io/Sven-voicebot",  
+  "homepage": "http://joelgeorgie.github.io/sven-voicebot",  
   "name": "re-mail",
   "version": "0.1.0",
   "private": true,
